--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
             <div class="hero-image">
-                <img src="assets/images/profile.png" alt="Profile Image">
+                <img src="assets/images/profile.png" alt="Profile Image" loading="lazy">
             </div>
         </div>
     </section>
