Google analytics add

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
-    
+
     <title>Anuja Kumari | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    
+
     <link rel="icon" type="image/png" href="./assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
@@ -17,7 +17,15 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZJ8ZLFB2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-CJZJ8ZLFB2');
+    </script>
 
 </head>
 
@@ -268,7 +276,8 @@
                     <h3>Connect With Me</h3>
                     <div class="social-links">
                         <a href="https://github.com/k-anuja06"><i class="fab fa-github" target="_blank"></i></a>
-                        <a href="https://www.linkedin.com/in/k-anuja06/"><i class="fab fa-linkedin" target="_blank"></i></a>
+                        <a href="https://www.linkedin.com/in/k-anuja06/"><i class="fab fa-linkedin"
+                                target="_blank"></i></a>
                         <a href="https://x.com/AnujaKumar0621"><i class="fab fa-twitter" target="_blank"></i></a>
                         <a href="#"><i class="fab fa-instagram" target="_blank"></i></a>
                     </div>
