--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZJ8ZLFB2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FKCY5Q9KX"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-CJZJ8ZLFB2');
+        gtag('config', 'G-4FKCY5Q9KX');
     </script>
 
 </head>
