Convert to webp

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="./assets/favicon/favicon-96x96.webp" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.webp">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.webp" />
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Google tag (gtag.js) -->
@@ -64,7 +64,7 @@
                 <a href="#contact" class="btn">Get In Touch</a>
             </div>
             <div class="hero-image">
-                <img src="assets/images/profile.png" alt="Profile Image" loading="lazy">
+                <img src="assets/images/webp/profile.webp" alt="Profile Image" loading="lazy">
             </div>
         </div>
     </section>
@@ -113,7 +113,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./assets/images/project1.png" alt="Project 1">
+                        <img src="./assets/images/webp/project1.webp" alt="Project 1">
                     </div>
                     <div class="project-info">
                         <h3>Bloom Botanica</h3>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./assets/images/project2.png" alt="Project 2">
+                        <img src="./assets/images/webp/project2.webp" alt="Project 2">
                     </div>
                     <div class="project-info">
                         <h3>TravelxIn</h3>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="./assets/images/project3.jpeg" alt="Project 3">
+                        <img src="./assets/images/webp/project3.webp" alt="Project 3">
                     </div>
                     <div class="project-info">
                         <h3>KhojoMovie</h3>
@@ -172,37 +172,37 @@
             <h2 class="section-title">My Gallery</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="./assets/images/conference.jpg" alt="Gallery Image 1" loading="lazy">
+                    <img src="./assets/images/webp/conference.webp" alt="Gallery Image 1" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>Conference 2024</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="./assets/images/demostration.jpg" alt="Gallery Image 2" loading="lazy">
+                    <img src="./assets/images/webp/demostration.webp" alt="Gallery Image 2" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>Project Demo</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="./assets/images/groupphoto2023-2025.jpg" alt="Gallery Image 3" loading="lazy">
+                    <img src="./assets/images/webp/groupphoto2023-2025.webp" alt="Gallery Image 3" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>2023-2025 Batch</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="./assets/images/awardceremony.jpg" alt="Gallery Image 4" loading="lazy">
+                    <img src="./assets/images/webp/awardceremony.webp" alt="Gallery Image 4" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>Award Ceremony</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="./assets/images/workshop.jpg" alt="Gallery Image 5" loading="lazy">
+                    <img src="./assets/images/webp/workshop.webp" alt="Gallery Image 5" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>Workshop</h3>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="./assets/images/hackathon.jpg" alt="Gallery Image 6" loading="lazy">
+                    <img src="./assets/images/webp/hackathon.webp" alt="Gallery Image 6" loading="lazy">
                     <div class="gallery-overlay">
                         <h3>Hackathon</h3>
                     </div>
